# django-payment

./: .gitignore  LICENSE  MANIFEST.in  pyproject.toml  setup.cfg  setup.py
nextpay/: apps.py
nextpay/locale/en/LC_MESSAGES/: django.mo  django.po
nextpay/locale/fa/LC_MESSAGES/: django.mo  django.po
nextpay/nextpay_apis/: apps.py
payment/: __init__.py  admin.py  apps.py  decorator.py  exceptions.py  globals.py  models.py  registry.py  signals.py  status.py  tools.py  validators.py
payment/backends/: base.py  nextpay.py
payment/locale/en/LC_MESSAGES/: django.mo  django.po
payment/locale/fa/LC_MESSAGES/: django.mo  django.po
payment/migrations/: 0001_initial.py  0002_alter_payportal_options_alter_transaction_options_and_more.py  0002_convert_uuid_to_charfield.py  0003_remove_payportal_default_currency_and_more.py
payment/payment_apis/: apps.py  checks.py  serializers.py
payment/payment_apis/api/: urls.py
payment/payment_apis/api/v1/: urls.py  views.py
payment/payment_backends/: __init__.py  base.py  nextpay.py  zibal.py
requirements/: requirements-development.txt  requirements-packaging.txt
