[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "payment"
dynamic = ['version']
description = "This library created for django payment portal"
readme = "README.md"  # Optional: If you have a README file
authors = [
    { name = "Amirali Fakhar", email = "fakharamirali@gmail.com" }
]
license = { text = "BSD 3-Clause License" }
homepage = "https://github.com/fakharamirali/django-payment.git"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.dependencies]
django = ">=5.0"
requests = ">=2"
setuptools = "*"


[tool.setuptools.dynamic]
version = { attr = "payment.__version__" }
