[metadata]
name = payment
version = 1.0.0
url = https://github.com/fakharamirali/django-payment.git
author = Amirali Fakhar
author_email = fakharamirali@gmail.com
description = This library created for django pay portal
license = BSD 3-Clause License
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    django>=3.2
